test/release/examples/spec/Methods/thisMethod.good
1
2
3
thisMethod.chpl:9: error: halt reached - ThreeArray index out of bounds: 4
